# ecom-acct

./: README.md  get_transactions.py  main.py  pyproject.toml
components/: authentication.py  meta_transactions.py  paypal_transactions.py  stripe_transactions.py
