[tool.poetry]
name = "ecom-accounting"
version = "0.1.0"
description = ""
authors = ["dlee <dlee9997@gmail.com>"]
readme = "README.md"
packages = [{include = "ecom_accounting"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
gspread = "^5.11.1"
oauth = "^1.0.1"
oauth2client = "^4.1.3"
stripe = "^6.4.0"
pandas = "^2.1.0"
forex-python = "^1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
